[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/interface/player_fire_indicator.tres" type="DynamicFont" id=1]
[ext_resource path="res://objects/common/FireIndicatorLabel.gd" type="Script" id=2]

[sub_resource type="Animation" id=6]
resource_name = "add_fire"
length = 0.2
step = 0.01

[node name="FireIndicatorLabel" type="Node2D"]
script = ExtResource( 2 )

[node name="FireLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -12.0
margin_right = 20.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "16"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireAnimationPlayer" type="AnimationPlayer" parent="."]
anims/add_fire = SubResource( 6 )
